# serial

./: .gitignore  CMakeLists.txt  PackagesList.cmake  ProjectName.cmake  TPLsList.cmake
cmake/: Dependencies.cmake
